Kubernetes/ingress/httpd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app2
  template:
    metadata:
      labels:
        name: app2
    spec:
      containers:
        - name: httpd-container
          image: httpd:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    name: app2
  ports:
    - port: 80
      targetPort: 80
