Kubernetes/ingress/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app1
  template:
    metadata:
      labels:
        name: app1
    spec:
      containers:
        - name: nginx-container
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    name: app1
  ports:
    - port: 80
      targetPort: 80
