Kubernetes/ingress/virtualhost.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtualhost-ingress
spec:
  rules:
  - host: nginx.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  - host: httpd.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-svc
            port:
              number: 80
